k8s-deploy/prod/tilde-prod-Ingress.yaml
# followed this guide
# https://cloud.google.com/kubernetes-engine/docs/tutorials/configuring-domain-name-static-ip#gcloud_1

# apiVersion: networking.k8s.io/v1beta1
# kind: Ingress
# metadata:
#   name: tilde-prod-ingress
#   annotations:
#     kubernetes.io/ingress.global-static-ip-name: k8s-ingress
#     # https://console.cloud.google.com/networking/addresses/list
# spec:
#   tls:
#     - secretName: tilde-domain-ssl # SEE certbot.md to see how to generate this secret
#   rules:
#     - host: backend.tilde.umuzi.org
#       http:
#         paths:
#           - path: /*
#             backend:
#               serviceName: tilde-backend
#               servicePort: 8080



apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tilde-prod-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: k8s-ingress
    networking.gke.io/managed-certificates: managed-cert
    kubernetes.io/ingress.class: "gce"
  labels:
    app: tilde-backend
spec:
  defaultBackend:
    service:
      name: tilde-backend
      port:
        number: 8080
